fixed dental history table view on small screens

--- a/src/styles/dental-history.scss
+++ b/src/styles/dental-history.scss
@@ -62,7 +62,7 @@
 				transition: 0.4s all;
 				cursor: pointer;
 				text-align: center;
-				padding: 4px;
+				padding: 0.7%;
 				font-size: 12px;
 				border: 1px solid #e3e3e3;
 				border-top: none;
